--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -1,18 +1,20 @@
 .about {
         background: $dark-green;
+        .heading {
+                margin-bottom: $heading-margin;
+        }
+        .has-text-right {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+        }
+        .view-gallery {
+                font-size: 90%;
+        }
+        
+        .learn-more {
+                font-size: 170%;
+                margin-top: 4%;
+        }
 }
 
-.view-gallery {
-        font-size: 90%;
-}
-
-.learn-more {
-        font-size: 170%;
-        margin-top: 4%;
-}
-
-.about .has-text-right {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-}
