--- a/scss/components/_img.scss
+++ b/scss/components/_img.scss
@@ -1,4 +1,4 @@
-.news, .events, .work {
+.about, .news, .events, .work {
     a img:hover {
         outline: $primary-green solid $active-border;
     }
