--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -1,7 +1,7 @@
 .about {
         background: $dark-green;
         .heading {
-                margin-bottom: $heading-margin;
+                margin-bottom: $heading-margin-large;
         }
         .has-text-right {
                 display: flex;
