--- a/scss/sections/_landing.scss
+++ b/scss/sections/_landing.scss
@@ -1,6 +1,9 @@
 .hero.landing {
     background: url(../../img/_DSC8072.jpg) center / cover;
     margin-bottom: 0;
+    a {
+        font-size: 120%;
+    }
 }
 
 .hero-body {
