--- a/scss/sections/_partners.scss
+++ b/scss/sections/_partners.scss
@@ -2,6 +2,7 @@
     color: $rich-black;
     .heading {
         color: $rich-black;
+        margin-bottom: $heading-margin-small;
     }
     img {
         width: 60%;
