--- a/scss/sections/_work.scss
+++ b/scss/sections/_work.scss
@@ -9,6 +9,6 @@
         font-size: 180%;
     }
     .heading {
-        margin-bottom: $heading-margin;
+        margin-bottom: $heading-margin-large;
     }
 }
