--- a/scss/themes/_background.scss
+++ b/scss/themes/_background.scss
@@ -1,3 +1,3 @@
 .hero.pattern {
-    background: url(../../img/maori_pattern.png) center / cover;
+    background: url(../../img/maori_pattern.png) no-repeat;
 }
