--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -7,7 +7,8 @@ $dark-green: #034e51;
 
 $small-margin: 1rem;
 $section-padding: 8%;
-$heading-margin: 8%;
+$heading-margin-large: 8%;
+$heading-margin-small: 4%;
 $field-margin: 4%;
 
 $line-width: 2px;
