--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -2,7 +2,7 @@
     color: $rich-black;
     .heading {
         color: $rich-black;
-        margin-bottom: 4%;
+        margin-bottom: $heading-margin-small;
     }
     .blurb {
         width: 80%;
