--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -12,4 +12,32 @@
         margin-top: 4%;
         text-decoration: underline;
     }
+    .media-item {
+        width: 70%;
+    }
+    .media-item:first-child {
+        align-self: flex-start;
+    }
+    .media-item:last-child {
+        align-self: flex-end;
+    }
+    .address {
+        display: flex;
+        flex-direction: column;
+        span {
+            font-size: 140%;
+        }
+        .email {
+            margin-top: 4%;
+        }
+    }
+    .button {
+        width: 50%;
+        margin: auto;
+    }
+    .social-media {
+        display: flex;
+        flex-direction: row;
+        align-self: center;
+    }
 }
