--- a/scss/themes/_layout.scss
+++ b/scss/themes/_layout.scss
@@ -17,6 +17,11 @@ section {
         * {
             margin: $small-margin;
         }
+        a {
+            * {
+                margin: 0;
+            }
+        }
     }
 }
 
@@ -39,18 +44,28 @@ section {
     position: relative;
 }
 
+.media-item-content {
+    display: flex;
+    flex-direction: row;
+}
+
+.media-item-content-text {
+    display: flex;
+    flex-direction: column;
+}
+
 .overlay {
     position: absolute;
     z-index: 1;
 }
 
 .overlay-bottom-left {
-    bottom: 4%;
+    bottom: 7%;
     left: 4%;
 }
 
 .overlay-bottom-right {
-    bottom: 4%;
+    bottom: 7%;
     right: 4%;
 }
 
