--- a/scss/sections/_events.scss
+++ b/scss/sections/_events.scss
@@ -27,9 +27,12 @@
         }
     }
     .button {
-        font-size: 90%;
+        font-size: 80%;
     }
-    .facebook-img {
+    img {
         border: $white solid 1px;
+    }
+    .title {
+        // font-size: 
     }
 }
