--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -22,6 +22,12 @@ body {
     font-size: 2.5em;
 }
 
+.heading.heading-h3 {
+    // font-family: 'Architects Daughter', cursive;
+    font-size: 180%;
+    color: $white;
+}
+
 a {
     color: $primary-green;
 }
