--- a/scss/sections/_landing.scss
+++ b/scss/sections/_landing.scss
@@ -1,7 +1,7 @@
 .hero.landing {
     background: url(../../img/_DSC8072.jpg) center / cover;
     margin-bottom: 0;
-    a {
+    .level a:last-child {
         font-size: 120%;
     }
 }
