--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -16,5 +16,8 @@
                 font-size: 170%;
                 margin-top: 4%;
         }
+        img {
+                border: $white solid $active-border;
+        }
 }
 
