--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -5,7 +5,7 @@
     padding: 4%;
     padding-bottom: 1%;
     background-color: $dark-green;
-    font-size: 70%;
+    // font-size: 70%;
     a {
         color: $white;
     }
@@ -29,24 +29,30 @@
         display: flex;
         flex-direction: column;
         span {
-            font-size: 140%;
+            font-size: 100%;
         }
         .email {
             margin-top: 4%;
         }
     }
-    .button {
-        width: 50%;
+    .hline {
+        margin-bottom: 2%;
+    }
+    .button-column {
         margin: auto;
+        .button.give {
+            width: 40%;
+            margin: auto;
+        }
     }
     .social-media {
-        font-size: 5em;
+        font-size: 3em;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
         align-self: center;
         * {
-            padding: 2%;
+            padding: 20%;
         }
     }
 }
