--- a/scss/themes/_layout.scss
+++ b/scss/themes/_layout.scss
@@ -70,11 +70,17 @@ section {
 }
 
 .overlay-top-left {
-    top: 4%;
-    left: 4%;
+    top: 2%;
+    left: 2%;
 }
 
 .overlay-top-right {
-    top: 4%;
-    right: 4%;
+    top: 2%;
+    right: 2%;
+}
+
+.overlay-middle-right {
+    font-size: 90%;
+    top: 30%;
+    margin-right: 8%;
 }
