--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -16,6 +16,9 @@ body {
     font-size: 5rem;
     letter-spacing: 0.1em;
     font-weight: 800;
+    @include tablet {
+        font-size: 3em;
+    }
 }
 
 .heading.heading-h2 {
@@ -23,7 +26,6 @@ body {
 }
 
 .heading.heading-h3 {
-    // font-family: 'Architects Daughter', cursive;
     font-size: 180%;
     color: $white;
 }
