--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -6,3 +6,10 @@
 .carousel .carousel-navigation.is-overlay {
     z-index: 2;
 }
+
+.carousel .carousel-container .carousel-item .title {
+    align-self: flex-end;
+    text-align: left;
+    background: none;
+    font-size: 2rem;
+}
