--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -5,7 +5,6 @@
     padding: 4%;
     padding-bottom: 1%;
     background-color: $dark-green;
-    // font-size: 70%;
     a {
         color: $white;
     }
@@ -53,6 +52,11 @@
         align-self: center;
         * {
             padding: 20%;
+        }
+    }
+    .title {
+        @include tablet {
+            font-size: 2em;
         }
     }
 }
