--- a/scss/sections/_landing.scss
+++ b/scss/sections/_landing.scss
@@ -1,8 +1,35 @@
 .hero.landing {
     background: url(../../img/_DSC8072.jpg) center / cover;
     margin-bottom: 0;
-    .level a:last-child {
-        font-size: 120%;
+    @include desktop {
+        padding-top: 4%;
+    }
+    .level {
+        display: flex;
+        @include widescreen {
+            flex-direction: row;
+        }
+        @include tablet {
+            margin-top: 2%;
+            justify-content: flex-end;
+            flex-direction: column;
+            font-size: 140%;
+        }
+        a:last-child {
+            align-self: center;
+            font-size: 1.6em;
+            @include desktop {
+                font-size: 1.4em;
+            }
+            @include tablet {
+                color: $white;
+            }
+        }
+        a:hover {
+            @include tablet {
+                color: $primary-green;
+            }
+        }
     }
 }
 
@@ -13,6 +40,12 @@
     padding: 3rem 0;
     .title {
         margin: $small-margin;
+        @include widescreen {
+            font-size: 2em;
+        }
+        @include tablet {
+            font-size: 1.6em;
+        }
     }
 }
 
