--- a/scss/sections/_work.scss
+++ b/scss/sections/_work.scss
@@ -1,8 +1,13 @@
 .work {
     background: url(../../img/_DSC8037.jpg) top center / cover;
     align-self: stretch;
-    .has-text-right {
+    .blurb {
         padding-right: 3%;
+        text-align: right;
+        margin-bottom: 4%;
+        @include desktop {
+            text-align: justify;
+        }
     }
     .button {
         margin-top: 4%;
