--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -18,3 +18,10 @@
         @content;
     }
 }
+
+// Custom breakpoints
+@mixin custom($bp){
+    @media (max-width: #{$bp}){
+        @content;
+    }
+}
