--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -9,7 +9,7 @@
                 justify-content: space-between;
                 text-align: right;
                 @include tablet {
-                        text-align: justify;
+                        text-align: left;
                 }
         }
         .view-gallery {
