--- a/scss/sections/_work.scss
+++ b/scss/sections/_work.scss
@@ -6,7 +6,7 @@
         text-align: right;
         margin-bottom: 4%;
         @include desktop {
-            text-align: justify;
+            text-align: left;
         }
     }
     .button {
