--- a/scss/themes/_background.scss
+++ b/scss/themes/_background.scss
@@ -1,5 +1,5 @@
 .hero.pattern {
-    background: url(../../img/maori_pattern.png) no-repeat;
+    background: url(../../img/maori_pattern_1.png) no-repeat;
     section {
         @include tablet {
             padding-top: 15%;
